objects/Comision__c.object
<CustomObject>
    <fields>
        <fullName>Comercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comercial</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Comisiones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Importe_de_comisi_n__c</fullName>
        <label>Importe de comisión</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importe_del_pedido__c</fullName>
        <label>Importe del pedido</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pedido__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pedido</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Comisiones</relationshipLabel>
        <relationshipName>Comisiones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Porcentaje_de_comisi_n__c</fullName>
        <label>Porcentaje de comisión</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Comision</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Código de Comision</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comisiones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>